# cutout-st-odf

./: .gitignore  README.md  datasets_config.json  pyproject.toml
notebooks/: cutout_st_odf_glyph.ipynb
src/st_odf/: __init__.py  structuretensor.py  utils.py
